# sprinkles

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  teste_abc.starling
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
assets/: test_project.starling
benches/: Cargo.toml
benches/assets/: 3d-explosion.ron
benches/src/: leak_test.rs  main.rs
crates/aracari/: Cargo.toml
crates/aracari/src/: asset.rs  compute.rs  extract.rs  lib.rs  material.rs  prelude.rs  runtime.rs  spawning.rs  textures.rs
crates/aracari/src/shaders/: common.wgsl  particle_material.wgsl  particle_simulate.wgsl  particle_sort.wgsl  particle_types.wgsl
crates/aracari/src/textures/: mod.rs  preset.rs
crates/aracari/tests/: asset_loader.rs
crates/aracari/tests/fixtures/: valid_particle_system.ron  valid_particle_system.whatever
crates/aracari_editor/: Cargo.toml
crates/aracari_editor/assets/shaders/: color_picker_alpha.wgsl  color_picker_checkerboard.wgsl  color_picker_hsv_rect.wgsl  (+4 more)
crates/aracari_editor/src/: io.rs  main.rs  plugin.rs  project.rs  state.rs  viewport.rs
crates/bevy_sprinkles/: Cargo.toml
crates/bevy_sprinkles/src/: asset.rs  compute.rs  extract.rs  lib.rs  material.rs  mesh.rs  prelude.rs  runtime.rs  sort.rs  spawning.rs
crates/bevy_sprinkles/src/asset/: curve.rs  mod.rs  particle_material.rs  serde_helpers.rs  versioning.rs
crates/bevy_sprinkles/src/asset/versions/: mod.rs  v0_1.rs
crates/bevy_sprinkles/src/shaders/: common.wgsl  particle_material.wgsl  particle_simulate.wgsl  particle_sort.wgsl
crates/bevy_sprinkles/src/textures/: baked.rs  preset.rs
crates/bevy_sprinkles/tests/: asset_loader.rs
crates/bevy_sprinkles/tests/fixtures/: dummy_data.ron  v0_1_particle_system.ron  valid_particle_system.ron  valid_particle_system.whatever
crates/bevy_sprinkles_editor/: Cargo.toml  build.rs
crates/bevy_sprinkles_editor/src/: assets.rs  diagnostics.rs  io.rs  main.rs  plugin.rs  project.rs  state.rs  utils.rs  viewport.rs
crates/bevy_starling/: Cargo.toml
crates/bevy_starling/src/: asset.rs  compute.rs  extract.rs  lib.rs  material.rs  prelude.rs  sort.rs
crates/bevy_starling_editor/: Cargo.toml
crates/bevy_starling_editor/assets/: demo.starling  untitled_project.starling
crates/bevy_starling_editor/src/: main.rs  plugin.rs  viewport.rs
crates/bevy_starling_editor/src/state/: editor_state.rs  mod.rs  persistence.rs
crates/bevy_starling_editor/src/ui/: color_picker.rs  curve_picker.rs  inspector.rs  mod.rs  styles.rs  topbar.rs
crates/bevy_starling_editor/src/ui/modals/: confirm_delete.rs  mod.rs  new_project.rs
crates/bevy_starling_editor/src/viewport/: camera.rs  grid.rs  mod.rs
crates/sprinkles/: Cargo.toml
crates/sprinkles/src/: compute.rs  extract.rs  lib.rs  material.rs  prelude.rs  sort.rs  spawning.rs
crates/sprinkles/tests/: asset_loader.rs
crates/sprinkles_editor/: Cargo.toml
crates/sprinkles_editor/assets/shaders/: color_picker_alpha.wgsl  color_picker_checkerboard.wgsl  color_picker_hsv_rect.wgsl  color_picker_hue.wgsl  common.wgsl  curve_edit.wgsl  gradient_edit.wgsl
crates/sprinkles_editor/src/: lib.rs  main.rs  plugin.rs  project.rs  state.rs  viewport.rs
crates/sprinkles_editor/src/ui/: icons.rs
crates/sprinkles_editor/src/ui/components/: data_panel.rs  playback_controls.rs  project_selector.rs  seekbar.rs
crates/sprinkles_editor/src/ui/components/binding/: commit.rs  direct.rs  mod.rs  swatch.rs  sync.rs  unified.rs  variant.rs
crates/sprinkles_editor/src/ui/components/inspector/: collider_properties.rs  collision.rs  colors.rs  draw_pass.rs  emission.rs  mod.rs  particle_flags.rs  scale.rs  sub_emitter.rs  turbulence.rs  utils.rs  velocities.rs
crates/sprinkles_editor/src/ui/widgets/: checkbox.rs  color_picker.rs  combobox.rs  curve_edit.rs  gradient_edit.rs  inspector_field.rs  popover.rs  text_edit.rs  texture_edit.rs  utils.rs  variant_edit.rs  vector_edit.rs
examples/: 3d_explosion.ron  3d_explosion.starling  README.md  magic-puff.ron  rain.ron
tests/editor_e2e/: cache.rs  collider_mgmt.rs  emitter_mgmt.rs  integration.rs  main.rs  playback.rs  project.rs  state.rs
tests/editor_e2e/inspector/: complex.rs  enums.rs  mod.rs  roundtrip.rs  scalars.rs  vectors.rs
tests/fixtures/: collision_test.ron  delayed_emitter.ron  disabled_emitter.ron  fixed_fps.ron  fixed_seed.ron  minimal_particle_system.ron  one_shot.ron  two_emitters.ron  visual_reference_explosion.ron  visual_reference_fountain.ron
tests/helpers/: mod.rs
tests/regression/: image_comparison.rs  main.rs
tests/runtime/: emitter_defaults.rs  emitter_runtime.rs  emitter_time.rs  free_functions.rs  integration.rs  main.rs  particle_system_runtime.rs  phase.rs  serialization.rs
tests/runtime/data_structures/: curve_texture.rs  gradient.rs  mod.rs  range.rs  solid_or_gradient_color.rs
tests/systems/: asset_loading.rs  colliders.rs  extract.rs  lifecycle.rs  main.rs  spawning.rs  sync.rs  update_time.rs
tests/visual/: comparison.rs  frame_capture.rs  main.rs  scene.rs  test_cases.rs
(+169 files in other folders)
