[workspace]
members = ["crates/bevy_sprinkles", "benches"]
exclude = ["crates/bevy_sprinkles_editor"]
resolver = "3"

[workspace.lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", default-features = false, features = [
    "default_app",
    "default_platform",
    "3d_api",
    "3d_bevy_render",
    "ui_api",
    "ui_bevy_render",
    "picking",
    # "reflect_auto_register",
] }
serde = { version = "1", features = ["derive"] }
ron = "0.10"
thiserror = "2"
bytemuck = { version = "1.14", features = ["derive"] }
bitflags = { version = "2", features = ["serde"] }
paste = "1"
