[package]
name = "bevy_sprinkles_benches"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
bevy = { version = "0.18.0", default-features = false, features = [
    "default_app",
    "default_platform",
    "3d_api",
    "3d_bevy_render",
] }
bevy_sprinkles = { path = "../crates/bevy_sprinkles" }
sysinfo = "0.35"

[[bin]]
name = "leak_test"
path = "src/leak_test.rs"

[[bin]]
name = "bevy_sprinkles_benches"
path = "src/main.rs"
