[package]
name = "aracari_editor"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
bevy = { workspace = true }
bevy_egui = "0.39.0"
egui-remixicon = "0.33.1"
aracari = { path = "../aracari" }
serde = { workspace = true }
ron = { workspace = true }
rfd = "0.15"
Inflector = "0.11.4"
