[package]
name = "sprinkles_editor"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
bevy = { workspace = true, features = ["jpeg"] }
sprinkles = { path = "../sprinkles" }
serde = { workspace = true }
ron = { workspace = true }
rfd = "0.15"
Inflector = "0.11.4"
bevy_ui_text_input = "0.7"
bevy_easings = "0.18.0"
open = "5.3.3"
